test/expected/declare_auf.out
declare f as function returning auto
                                ^
33: error: function returning "auto" not supported in C
